# opencarstream

./: .gitignore  Dockerfile  PACKAGING.md  README.md  README_native.md  com.opencarstream.server.plist.template  docker-compose.yml  manage_service.sh  populate_logos.py  pyproject.toml  run_native.sh  server.py  setup_native.sh  sync_subscriptions.py
Casks/: opencarstream-cli.rb  opencarstream.rb
Formula/: opencarstream.rb
macos/OpenCarStreamMenuBar/: Info.plist  OpenCarStreamMenuBarApp.swift  README.md
opencarstream/: __init__.py  cli.py  config.py  feeds.py  helpers.py  http_server.py  media.py  pluto.py  server_app.py  state.py  storage.py  views.py
scripts/: build_cli_pkg.sh  build_macos_app.sh  build_release_artifacts.sh  prepare_homebrew_tap.sh  update_cask_shas.sh
